--- a/ble-multimeter-app/index.html
+++ b/ble-multimeter-app/index.html
@@ -128,7 +128,7 @@ Decoder based on Python code from baldengineer
     <script>
         if (navigator.serviceWorker) {
             navigator.serviceWorker.register(
-                '/github-page-pwa/sw.js',
+                '/MP730026_tools/ble-multimeter-app/sw.js',
                 { scope: '/github-page-pwa/' }
             )
         }
