--- a/ble-multimeter-app/index.html
+++ b/ble-multimeter-app/index.html
@@ -129,7 +129,7 @@ Decoder based on Python code from baldengineer
         if (navigator.serviceWorker) {
             navigator.serviceWorker.register(
                 '/MP730026_tools/ble-multimeter-app/sw.js',
-                { scope: '/github-page-pwa/' }
+                { scope: '/MP730026_tools/ble-multimeter-app/' }
             )
         }
     </script>
